framec_tests/language_specific/c/v3_mir/positive/transition_inline_block_comment.frm
@target c

system S {
    machine:
        $A {
            e() {
                -> $B() /* comment ok */
            }
        }
        $B {
        }
}
