framec_tests/language_specific/c/v3_mir/negative/transition_block_comment_across_then_native.frm
@target c

system S {
    machine:
        $A {
            e() {
                -> $B() /* start
                   still comment
                   */ native();
            }
        }
}
